tests/type-errors/specfun_bad_sig.arl
archetype specfun_bad_sig

entry anentry (n : nat) {
  ()
}

specification entry anentry (n : int) {
  e1: true;
}
